--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,13 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  max-width: 100%;
+}
+
 /* fonts: Helvética or Montserrat or Sofia Pro */
 
 /* palette: paletadecores.com adobecolor */
